# app/Models/Address.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Models;
+
+use App\Models\User;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+
+class Address extends Model
+{
+    use HasFactory;
+
+    protected $fillable=[
+        'address',
+        'lat',
+        'lng',
+        'postal_code',
+        'user_id'
+    ];
+
+
+    public function user(){
+        return $this->belongsTo(User::class);
+    }
+}
